fix long org name overflowing #1889

--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -52,6 +52,11 @@
 		.name
 			color: white
 			line-height: header-height
+			overflow: hidden
+			white-space: nowrap
+			text-overflow: ellipsis
+			max-width: 172px
+			float: left
 		&:hover
 			background: lighten(organisation-background, 1%)
 			text-decoration: none
